@@ -10,7 +10,7 @@
     <div id='license'><a href="license.html">License </a></div>
     <div id='changelog'><a onclick='document.getElementById("changelogpopup").style.visibility = "visible"' href='#'>v0.0.2.2</a>  <a href="changelog.txt">Full changelog</a></div>
     <div id='changelogpopup'><button onclick='document.getElementById("changelogpopup").style.visibility = "hidden"'' class='closepopup'>X</button><pre>
-v0.0.2.2.4:<br/>
+v0.0.2.2.5:<br/>
 v0 a new game<br/>
   .0 the basics<br/>
     .2 'a bunch of upgrades'<br/>
